--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                             <li>Streamlined deployments and automated processes using Azure DevOps pipelines and Gitlab CI/CD</li>
                             <li>Created automation scripts with PowerShell and Python to streamline repetitive tasks and enhance productivity.</li>
                             <li>Gained a solid foundation in Linux and Ansible, enabling better management of systems and configurations. </li>
+							<li>Administered Windows servers, maintaining system stability, security, and optimal performance.</li>
                             <li>Implemented Azure cost optimization strategies by identifying underutilized resources, leveraging reserved instances, and automating cost monitoring.</li>
                             <li>Continuously implement updates and conduct maintenance to maintain application stability and security.</li>
                             <li>Created data reports and visualizations using Power BI, providing key insights to stakeholders</li>
@@ -182,6 +183,7 @@
     </footer>-->
     <script src="button.js"></script>
     </body>
+
 
 
 </html> 
