--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
         <header>
             <div class="photo">
-                <img src="photo.jpg">
+                <img src="photo-cv.JPG">
             </div>
                 
             <div class="about">
@@ -187,4 +187,5 @@
 
 
 </html> 
+
 
