--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </p>
                 <p> 
                     I take ownership of my responsibilities and follow projects through to completion. 
-                    I’m passionate about continuous improvement — both of my own skills and of the systems I work on — and 
+                    I’m passionate about continuous improvement — both of my own skills and of the systems I work on and 
                     I find satisfaction in making things more efficient, robust, and well-documented. 
                 </p>
                 
@@ -70,7 +70,7 @@
 
                         <ul>
                             <li>Microsoft Azure</li>
-							<li>Terraform (IaC - Infrastructure as Code)</li>
+							<li>Terraform</li>
                             <li>Azure Resource Manager (ARM) Templates</li>
                             <li>Azure DevOps</li>
                             <li>GitLab CI/CD</li>
@@ -88,8 +88,6 @@
                             <li>Python</li>
                             <li>Bash</li>
                             <li>Ansible</li>
-                            <li>Excel (VBA Automation)</li>
-                            <li>YAML</li>
                         </ul>
 
                         <h3>
@@ -97,23 +95,25 @@
                         </h3>
 
                         <ul>
-                            <li>Power BI (Data Visualization & Dashboards)</li>
+                            <li>Power BI</li>
+							<li>Azure Monitoring</li>
                         </ul>
                         <h3>
-                            Other Tools/Technologies:
+                            Other Technologies:
                         </h3>
                         <ul>
                             <li>HashiCorp Vault</li>
                             <li>Git</li>
-                            <li>Visual Studio Code</li>
-                            <li>Confluence, GitLab Wikis</li>
+                            <li>SQL</li>
+                            <li>VBA</li>
                         </ul>
 
                         <h3>
-                            Other
+                            Languages
                         </h3>
                         <ul>
                             <li>Advanced English in writing and speech (B2)</li>
+							<li>Polish native</li>
                         </ul>
                         </ul>
                     </div>
@@ -124,36 +124,29 @@
                         <h1>Professional expirience</h1>
                         <h3>DevOps Engineer - UBS - 09.2023 - present  </h3>
                         <p>
-                            As a DevOps Engineer, I am responsible for developing, automating,
-                            and maintaining infrastructure and CI/CD processes. My role involves
-                            managing cloud environments on Azure, deploying new solutions, and
-                            optimizing existing systems.
+							Designed, deployed, and maintained Microsoft Azure
+							infrastructure supporting enterprise testing applications, used by
+							multiple developers and QA teams across the bank.
                         </p>
                         <ul>
-                            <li>Managed and deployed resources in Microsoft Azure, leveraging Terraform and ARM Templates.</li>
-                            <li>Streamlined deployments and automated processes using Azure DevOps pipelines and Gitlab CI/CD</li>
-                            <li>Created automation scripts with PowerShell and Python to streamline repetitive tasks and enhance productivity.</li>
-                            <li>Gained a solid foundation in Linux and Ansible, enabling better management of systems and configurations. </li>
-							<li>Administered Windows servers, maintaining system stability, security, and optimal performance.</li>
-							<li>Basic knowledge of SQL and experience in SQL database administration (Azure SQL, PostgreSQL)</li>
-                            <li>Implemented Azure cost optimization strategies by identifying underutilized resources, leveraging reserved instances, and automating cost monitoring.</li>
+                            <li>Led full infrastructure migration between Azure subscriptions, ensured business continuity for enterprise applications.</li>
+                            <li>Automated infrastructure provisioning using Terraform and ARM and, accelerating infrastructure deployments by 50% to support enterprise-grade production apps.</li>
+                            <li>Built CI/CD workflows in GitLab CI/CD and Azure DevOps, reducing manual processes by approximately 40%, boosted reliability for our team.</li>
+                            <li>Developed PowerShell and Python scripts for self-healing infrastructure to detect and resolve issues, boosting resilience and minimizing downtime for owned applications.</li>
+							<li>Managed Linux RedHat servers via Ansible and Windows servers, ensuring stable runtime environments.</li>
+							<li>Implemented cloud cost optimization strategies through resource right-sizing, reducing team’s infrastructure cost by 30%.</li>
                             <li>Continuously implement updates and conduct maintenance to maintain application stability and security.</li>
                         </ul>
 
                         <h3>Intern in DevOps Platforms - UBS - 05.2022 - 09.2023 (1 years & 5 months)</h3>
                         <p>
-                            Collaborated with a team of experienced DevOps engineers to deploy
-                            and maintain applications on Azure cloud-based environments,
-                            troubleshoot issues related to software deployments, system 
-                            configurations, and infrastructure.
+							Supported the DevOps team in building, deploying, and maintaining Azure cloud environments.
                         </p>
                         <ul>
-                            <li>Gained hands-on experience with DevOps methodologies, tools, and practices, including continuous integration/continuous deployment (CI/CD), source control.</li>
-                            <li>Utilized GitLab for source control management and to facilitate collaboration with team members.</li>
+                            <li>Created Python scripts for operational tasks to automate routine processes, supported DevOps team in building environments more efficiently.</li>
+                            <li>Developed VBA automations for Excel, reduced manual data entry by 70%, accelerated analysis for Fin-Ops teams.</li>
                             <li>Worked with cloud-based infrastructure. Azure cloud.</li>
-                            <li>Scripted automation using Python to streamline various processes and increase efficiency.</li>
-                            <li>Automated Excel tasks using VBA to reduce manual effort and increase accuracy. </li>
-                            <li>Created Power BI dashboards to help visualize data and insights for key stakeholders.</li>
+                            <li>Built Power BI dashboards, visualized data and insights, enabled faster decision-making for managers.</li>
                         </ul>
                         
                         <h1>Education and certificates</h1>
@@ -187,6 +180,7 @@
 
 
 </html> 
+
 
 
 
